chore: 代码格式化和功能完善